[css] Fix navigation overlaps anchor issue.
See:
* https://stackoverflow.com/a/38106970/881759
* https://github.com/twbs/bootstrap/issues/1768#issuecomment-46519033

--- a/src/assets/stylesheets/_navigation.scss
+++ b/src/assets/stylesheets/_navigation.scss
@@ -267,6 +267,16 @@
   }
 }
 
+// Fix navigation overlapping anchor issue
+// Source: https://stackoverflow.com/a/38106970/881759
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -75px;
+  height: 75px;
+  visibility: hidden;
+}
+
 /* menu toggle */
 
 .menu-toggle {
